--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
             if (r) {
                 // Generar enlace de WhatsApp
                 const numeroLocal = "34603590998"; // Número del local proporcionado por el usuario
-                const textoWa = `¡Hola Girls Date! Acabo de reservar una cita para *${servicioDeseado}* el *${fechaSeleccionada}* a las *${horaSel}*. Mi nombre es *${nombreCliente}* y mi teléfono es *${telCliente}*.`;
+                const textoWa = `¡Hola Girls Date! Acabo de reservar una cita para *${servicioDeseado}* el *${fechaSeleccionada}* a las *${horaSel}*. Mi nombre es *${nombreCliente}*.`;
 
                 // Detectar si es móvil para forzar la app nativa en lugar de la web
                 const esMovil = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
