--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,13 @@ h2 {
     color: white;
 }
 
+.dia.pasado {
+    background: #e0e0e0;
+    color: #999;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
 .punto {
     display: block;
     width: 6px;
