--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Panel Admin</title>
     <link rel="manifest" href="/static/manifest.json">
-    <link rel="icon" href="/static/icon-192.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="/static/style.css?v=8">
+    <link rel="icon" href="/static/icon-192.png" type="image/png">
+    <link rel="stylesheet" href="/static/style.css?v=9">
 </head>
 
 <body>
