--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     <meta name="apple-mobile-web-app-title" content="Girls Date">
     <title>Girls Date</title>
     <link rel="manifest" href="/static/manifest.json">
-    <link rel="icon" href="/static/icon-192.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/static/icon-192.svg">
-    <link rel="stylesheet" href="/static/style.css?v=9">
+    <link rel="icon" href="/static/icon-192.png" type="image/png">
+    <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
+    <link rel="stylesheet" href="/static/style.css?v=10">
 </head>
 
 <body>
