--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/tan-pearl');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -33,11 +35,12 @@ body {
 }
 
 h1 {
+    font-family: 'TAN PEARL', sans-serif;
+    font-size: 2.8em;
+    font-weight: normal;
     text-align: center;
     color: #8b5a2b;
-    /* Brown */
     margin-bottom: 20px;
-    font-size: 1.6em;
 }
 
 h2 {
