--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/tan-pearl');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -35,12 +35,13 @@ body {
 }
 
 h1 {
-    font-family: 'TAN PEARL', sans-serif;
-    font-size: 2.8em;
-    font-weight: normal;
+    font-family: 'Playfair Display', serif;
+    font-size: 2.5em;
+    font-weight: 500;
     text-align: center;
     color: #8b5a2b;
     margin-bottom: 20px;
+    letter-spacing: 1px;
 }
 
 h2 {
