Cambiar texto Mis Turnos por Mis Citas

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <br><br>
             <a href="{{ url_for('mis_turnos') }}"
                 style="color: #fff; background-color: #e84b7a; padding: 5px 12px; border-radius: 12px; text-decoration: none; font-weight: bold; margin-right: 10px;">📅
-                Mis Turnos</a>
+                Mis Citas</a>
             <a href="{{ url_for('logout_cliente') }}"
                 style="margin-left: 10px; color: #ff4b4b; text-decoration: none; font-weight: bold;">Cerrar sesión</a>
             {% else %}
