--- a/templates/login_cliente.html
+++ b/templates/login_cliente.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión - Agenda Beauty</title>
+    <title>Iniciar Sesión - Girls Date</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <!-- Manifest para PWA -->
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
